src/test/deca/syntax/invalid/parser/with_object/method_list_params_ident.deca
class A { a a (0a a){} }